# MimicAI

./: .gitignore  package-lock.json  package.json
backend/: .env.example  .vercelignore  instructions.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: settings.py
backend/app/db/: base.py  qdrant.py  schemas.py  session.py
backend/app/db/models/: __init__.py  chat_message.py  chat_session.py  entity.py  memory.py  profile.py  project.py  research.py  research_profile.py  research_source.py  user.py
backend/app/modules/analysis/: __init__.py  service.py
backend/app/modules/analysis/agents/: __init__.py  controversy_agent.py  personality_agent.py  (+1 more)
backend/app/modules/chat/: context_loader.py  graph.py  memory_manager.py  memory_provider.py  retriever.py  router.py  schemas.py  service.py  web_search.py
backend/app/modules/entity/: router.py  schemas.py  service.py  utils.py
backend/app/modules/profile/: router.py  schemas.py
backend/app/modules/project/: router.py  schemas.py  service.py
backend/app/modules/research/: graph.py  router.py  schemas.py  service.py
backend/app/modules/user/: router.py  schemas.py  service.py
backend/app/prompts/: __init__.py
backend/app/prompts/chat/: __init__.py  persona.py
backend/app/repos/: chat_message_repo.py  chat_session_repo.py  entity_repo.py  project_repo.py  research_profile_repo.py  research_repo.py  research_source_repo.py  user_repo.py
backend/app/utils/: embeddings_client.py  llm_client.py
(+121 files in other folders)
