[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asyncpg==0.31.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "fastapi==0.135.1",
    "greenlet==3.3.2",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jiter==0.13.0",
    "loguru==0.7.3",
    "numpy==2.4.2",
    "openai==2.24.0",
    "portalocker==3.2.0",
    "protobuf==7.34.0",
    "psycopg2>=2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv==1.2.2",
    "pywin32==311",
    "qdrant-client==1.17.0",
    "regex==2026.2.28",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.48",
    "starlette==0.52.1",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "win32-setctime==1.2.0",
]
